Completed up to exercise 10

--- a/static/index.html
+++ b/static/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <div id="root">Hello from HTML</div>
+    <div id="root">Hello From Html</div>
     <script src="bundle.js"></script>
 </body>
 
